Update Predicting the Survival of Titanic Passengers.ipynb

--- a/Predicting the Survival of Titanic Passengers.ipynb
+++ b/Predicting the Survival of Titanic Passengers.ipynb
@@ -1045,9 +1045,8 @@
     }
    ],
    "source": [
-    "young_df = train_df[train_df['Age'] >= 37]\n",
-    "young_female_df = young_df[young_df[\"Sex\"] == 'female']\n",
-    "young_female_df"
+    "midage_female = train_df[(train_df['Age'] >= 37) | (train_df["Sex"] == 'female')] ]\n",
+    "midage_female"
    ]
   },
   {
